quicknotes-k8s/statefulset-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
  namespace: quicknotes
spec:
  selector:
    matchLabels:
      app: mysqldb
  serviceName: "mysqldb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
