quicknotes-k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: quicknotes
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
