quicknotes-k8s/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: quicknotes
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysqldb
